--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,4 +13,4 @@ deploy:
   only:
     - master
   script:
-    - sshpass -p "$SSH_PASSWORD" ssh -v -o StrictHostKeyChecking=no dev@wlab.me "$PULL_LATEST && $DOCKER_COMPOSE_DOWN && $DOCKER_COMPOSE_UP"
+    - sshpass -p "$SSH_PASSWORD" ssh -v -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "$PULL_LATEST && $DOCKER_COMPOSE_DOWN && $DOCKER_COMPOSE_UP"
