change default host to wlab.me

--- a/default.nginx.conf
+++ b/default.nginx.conf
@@ -26,7 +26,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name wlab.me;
         location / {
             proxy_set_header Accept-Encoding "";
             proxy_pass https://medium.com/dev-channel/;
