add rule for redirection

--- a/default.nginx.conf
+++ b/default.nginx.conf
@@ -30,7 +30,7 @@ http {
         location / {
             proxy_set_header Accept-Encoding "";
             proxy_pass https://medium.com/dev-channel/;
-            proxy_redirect https://medium.com/dev-channel http://wlab.me:9999/;
+            proxy_redirect https://medium.com/dev-channel/ http://localhost:9999/;
             sub_filter_last_modified on;
             sub_filter 'https://medium.com/dev-channel' 'http://wlab.me';
             sub_filter_once off;	
