add rule for redirection

--- a/default.nginx.conf
+++ b/default.nginx.conf
@@ -30,7 +30,9 @@ http {
         location / {
             proxy_set_header Accept-Encoding "";
             proxy_pass https://medium.com/dev-channel/;
-            proxy_redirect https://medium.com/dev-channel/ http://localhost:9999/;
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             sub_filter_last_modified on;
             sub_filter 'https://medium.com/dev-channel' 'http://wlab.me';
             sub_filter_once off;	
