--- a/default.nginx.conf
+++ b/default.nginx.conf
@@ -33,7 +33,7 @@ http {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            sub_filter_last_modified on;
+            sub_filter_last_modified off;
             sub_filter 'https://medium.com/dev-channel' 'http://wlab.me';
             sub_filter_once off;	
         }
