fix redirect on first request

--- a/default.nginx.conf
+++ b/default.nginx.conf
@@ -29,11 +29,10 @@ http {
         server_name wlab.me;
         location / {
             proxy_set_header Accept-Encoding "*";
-            proxy_pass https://medium.com/dev-channel/;
-            # proxy_redirect off;
-            # proxy_set_header X-Real-IP $remote_addr;
-            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            sub_filter_last_modified off;
+            rewrite ^/$ /dev-channel break;
+            rewrite ^/(.*) /dev-channel/$1 break;
+            proxy_pass https://medium.com/;
+            sub_filter_last_modified on;
             sub_filter 'https://medium.com/dev-channel' 'http://wlab.me';
             sub_filter_once off;	
         }
